--- a/demo/yymaptest.html
+++ b/demo/yymaptest.html
@@ -33,7 +33,7 @@
             bearing: 0,
         });
 
-        const googleTileLayer = YY.LayerLookup.lookup('amap');
+        const googleTileLayer = YY.LayerLookup.lookup('google');
         map.addBaseLayer(googleTileLayer);
 
         map.on('click', function (e) {
